Updated how EI extracts url params, and now accepts JMESPATH