@@ -16,13 +16,27 @@
 */
 package com.ericsson.ei.subscriptionhandler;
 
+import java.io.IOException;
+import java.io.UnsupportedEncodingException;
+import java.net.MalformedURLException;
 import java.net.URI;
+
+import java.net.URLDecoder;
+import java.net.URLEncoder;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.charset.Charset;
 import java.text.ParseException;
+import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Base64;
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import javax.annotation.PostConstruct;
 import javax.mail.MessagingException;
@@ -41,12 +55,14 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import com.ericsson.ei.handlers.DateUtils;
 import com.ericsson.ei.jmespath.JmesPathInterface;
 import com.ericsson.ei.mongodbhandler.MongoDBHandler;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.google.common.base.Strings;
 import com.mongodb.BasicDBObject;
 
 import lombok.Getter;
@@ -237,11 +253,11 @@ public class InformSubscriber {
      * @return
      */
     private JsonNode fetchJenkinsCrumbIfAny(String encoding, String notificationMeta) {
-        URI url;
+        URL url;
         try {
             String baseUrl = extractBaseUrl(notificationMeta);
-            url = new URI(baseUrl + JENKINS_CRUMB_ENDPOINT);
-        } catch (URISyntaxException e) {
+            url = new URL(baseUrl + JENKINS_CRUMB_ENDPOINT);
+        } catch (MalformedURLException e) {
             LOGGER.error("Error! Failed to format url to collect jenkins crumb");
             return null;
         }
@@ -276,36 +292,110 @@ public class InformSubscriber {
         if (!notificationMeta.contains("?")) {
             return notificationMeta;
         }
-
         LOGGER.debug("Unformatted notificationMeta = " + notificationMeta);
+
         try {
             String baseUrl = extractBaseUrl(notificationMeta);
             String contextPath = extractContextPath(notificationMeta);
+            List<NameValuePair> params = extractUrlParameters(notificationMeta);
+            LOGGER.debug("Notification meta in parts:\nBase Url: {}\nContext Path: {}\nURL Parameters: {} ", baseUrl, contextPath, params);
 
-            List<NameValuePair> processedParams = processJmespathParameters(aggregatedObject, notificationMeta);
+            List<NameValuePair> processedParams = processJmespathParameters(aggregatedObject, params);
+            LOGGER.debug("JMESPATH processed parameters :\n{}", processedParams);
             String encodedQuery = URLEncodedUtils.format(processedParams, "UTF8");
 
             notificationMeta = String.format("%s%s?%s", baseUrl, contextPath, encodedQuery);
             LOGGER.debug("Formatted notificationMeta = " + notificationMeta);
 
             return notificationMeta;
-        } catch (URISyntaxException e) {
-            LOGGER.error("Failed to reformat url reason: " + e.getMessage());
+        } catch (MalformedURLException | UnsupportedEncodingException e) {
+            LOGGER.error("Failed to extract parameters: " + e.getMessage());
             return notificationMeta;
         }
     }
 
-    private List<NameValuePair> processJmespathParameters(String aggregatedObject, String notificationMeta) throws URISyntaxException {
-        List<NameValuePair> params = URLEncodedUtils.parse(new URI(notificationMeta), Charset.forName("UTF-8"));
+    /**
+     * Extract the query from the notificationMeta and returns them as a list of KeyValuePair
+     * @param notificationMeta
+     * @return
+     * @throws MalformedURLException
+     * @throws UnsupportedEncodingException
+     */
+    private List<NameValuePair> extractUrlParameters(String notificationMeta) throws MalformedURLException, UnsupportedEncodingException {
+        URL url = new URL(notificationMeta);
+        String query = url.getQuery();
+        List<NameValuePair> params = splitQuery(query);
+        return params;
+    }
+
+    /**
+     * Splits a query string into one pair for each key and value.
+     * Loops said pairs and extracts the key and value as KeyValuePair.
+     * Adds KeyValuePair to list.
+     *
+     * @param query
+     * @return List<KeyValuePair>
+     * @throws UnsupportedEncodingException
+     */
+    public List<NameValuePair> splitQuery(String query) throws UnsupportedEncodingException {
+        List<NameValuePair> queryMap = new ArrayList<>();
+        String[] pairs = query.split("&");
+
+        for (String pair : pairs) {
+            NameValuePair nameValuePair = extractKeyAndValue(pair);
+            if (nameValuePair != null) {
+                queryMap.add(nameValuePair);
+            }
+        }
+
+        return queryMap;
+      }
+
+    /**
+     * Extracts and decodes the key and value from a set of parameters
+     *
+     * @param pair
+     * @return KeyValuePair
+     * @throws UnsupportedEncodingException
+     */
+    private NameValuePair extractKeyAndValue(String pair) throws UnsupportedEncodingException {
+        int firstIndexOfEqualsSign = pair.indexOf("=");
+        String key = "";
+        String value = "";
+
+        if (firstIndexOfEqualsSign > 0) {
+            key = pair.substring(0, firstIndexOfEqualsSign);
+            value = pair.substring(firstIndexOfEqualsSign + 1);
+        } else if (pair.length() > firstIndexOfEqualsSign + 1 ) {
+            key = "";
+            value = pair.substring(firstIndexOfEqualsSign + 1);
+        } else {
+            return null;
+        }
+
+        return new BasicNameValuePair(key, value);
+    }
+
+    /**
+     * Runs JMESPATH rules on values in a list of KeyValuePair and replaces the value with extracted data
+     *
+     * @param aggregatedObject
+     * @param params
+     * @return List<NameValuePair>
+     * @throws UnsupportedEncodingException
+     */
+    private List<NameValuePair> processJmespathParameters(String aggregatedObject, List<NameValuePair> params) throws UnsupportedEncodingException {
         List<NameValuePair> processedParams = new ArrayList<>();
 
         for (NameValuePair param : params) {
-            String name = param.getName(), value = param.getValue();
+            String name = URLDecoder.decode(param.getName(), "UTF-8");
+            String value = URLDecoder.decode(param.getValue(), "UTF-8");
+
             LOGGER.debug("Input parameter key and value: " + name + " : " + value);
             value = jmespath.runRuleOnEvent(value.replaceAll(REGEX, ""), aggregatedObject).toString().replaceAll(REGEX, "");
 
-            processedParams.add(new BasicNameValuePair(name, value));
             LOGGER.debug("Formatted parameter key and value: " + name + " : " + value);
+            processedParams.add(new BasicNameValuePair(name, value));
         }
         return processedParams;
     }
@@ -316,11 +406,12 @@ public class InformSubscriber {
      *
      * @param notificationMeta
      * @return
+     * @throws MalformedURLException
      * @throws URISyntaxException
      */
-    private String extractBaseUrl(String notificationMeta) throws URISyntaxException {
-        URI url = new URI(notificationMeta);
-        String protocol = url.getScheme();
+    private String extractBaseUrl(String notificationMeta) throws MalformedURLException {
+        URL url = new URL(notificationMeta);
+        String protocol = url.getProtocol();
         String authority = url.getAuthority();
         return String.format("%s://%s", protocol, authority);
     }
@@ -330,10 +421,11 @@ public class InformSubscriber {
      *
      * @param notificationMeta
      * @return
+     * @throws MalformedURLException
      * @throws URISyntaxException
      */
-    private String extractContextPath(String notificationMeta) throws URISyntaxException {
-        URI url = new URI(notificationMeta);
+    private String extractContextPath(String notificationMeta) throws MalformedURLException {
+        URL url = new URL(notificationMeta);
         String contextPath = url.getPath();
         return contextPath;
     }
